# docs/swagger.yaml
@@ -42,6 +42,13 @@ definitions:
     x-enum-varnames:
     - Cat
     - Dog
+  model.UpdatePet:
+    properties:
+      description:
+        type: string
+      price:
+        type: number
+    type: object
 host: localhost:8080
 info:
   contact: {}
@@ -132,6 +139,40 @@ paths:
           schema:
             $ref: '#/definitions/model.ErrorResponse'
       summary: Получить питомца по ID
+      tags:
+      - pets
+    put:
+      consumes:
+      - application/json
+      description: Обновляет информацию о питомце по его идентификатору
+      parameters:
+      - description: ID питомца
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Обновленная информация о питомце
+        in: body
+        name: pet
+        required: true
+        schema:
+          $ref: '#/definitions/model.UpdatePet'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Pet'
+        "400":
+          description: Ошибка при обработке запроса
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+        "404":
+          description: Питомец не найден
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+      summary: Обновить питомца по ID
       tags:
       - pets
 swagger: "2.0"
