# internal/model/petUpdateDTO.go
@@ -1,1 +1,6 @@
 package model
+
+type UpdatePet struct {
+	Price       float64 `json:"price"`
+	Description string  `json:"description,omitempty"`
+}
